--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 </head>
 <body>
 <script>
-    var worker = new Worker('work.js');
+    var worker = new Worker('worker.js');
+
+    worker.addEventListener('message', function(e) {
+      console.log('Worker said: ', e.data);
+    }, false);
 
     worker.postMessage('Hello World');
-    
 </script>
 </body>
 </html>
