--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 <script>
     var worker = new Worker('worker.js');
-    
+
+    worker.postMessage('Hello World');
 </script>
 </body>
 </html>
