--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <script>
     var worker = new Worker('worker.js');
 
+    worker.addEventListener('message', function(e) {
+      console.log('Worker said: ', e.data);
+    }, false);
+
     worker.postMessage('Hello World');
 </script>
 </body>
