selfキーワードの削除

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       console.log('Worker said: ', e.data);
     }, false);
 
-    worker.postMessage('Hello World');
+    worker.postMessage('Hello World from Web Worker!');
 </script>
 </body>
 </html>
